--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-{}
+{
+  "dependencies": {
+    "@chakra-ui/react": "^3.26.0",
+    "@emotion/react": "^11.14.0",
+    "next-themes": "^0.4.6",
+    "react-icons": "^5.5.0"
+  }
+}
